Completing D4.0/D4.1/D4.2 Fazes